Реализация хранилища записей аудита